// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`route listing should list all DELETE routes 1`] = `
{
  "method": "DELETE",
  "routes": {
    "unadopt": {
      "schema": {
        "additionalProperties": false,
        "properties": {
          "queryType": {
            "type": "string",
          },
          "tree_id": {
            "type": "string",
          },
          "uuid": {
            "type": "string",
          },
        },
        "required": [
          "uuid",
          "tree_id",
        ],
        "type": "object",
      },
      "url": "delete/unadopt",
    },
    "unwater": {
      "schema": {
        "additionalProperties": false,
        "properties": {
          "queryType": {
            "type": "string",
          },
          "tree_id": {
            "type": "string",
          },
          "uuid": {
            "type": "string",
          },
          "watering_id": {
            "type": "number",
          },
        },
        "required": [
          "uuid",
          "tree_id",
          "watering_id",
        ],
        "type": "object",
      },
      "url": "delete/unwater",
    },
  },
}
`;

exports[`route listing should list all POST routes 1`] = `
{
  "method": "POST",
  "routes": {
    "adopt": {
      "schema": {
        "additionalProperties": false,
        "properties": {
          "queryType": {
            "type": "string",
          },
          "tree_id": {
            "type": "string",
          },
          "uuid": {
            "type": "string",
          },
        },
        "required": [
          "uuid",
          "tree_id",
        ],
        "type": "object",
      },
      "url": "post/adopt",
    },
    "water": {
      "schema": {
        "additionalProperties": false,
        "properties": {
          "amount": {
            "type": "number",
          },
          "queryType": {
            "type": "string",
          },
          "timestamp": {
            "type": "string",
          },
          "tree_id": {
            "type": "string",
          },
          "username": {
            "type": "string",
          },
          "uuid": {
            "type": "string",
          },
        },
        "required": [
          "uuid",
          "tree_id",
          "username",
          "timestamp",
          "amount",
        ],
        "type": "object",
      },
      "url": "post/water",
    },
  },
}
`;
